// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeader has the expected html structure 1 1`] = `
"<nav id=\\"app-header\\">
   <div class=\\"container\\">
      <!---->
      <a href=\\"#/\\" class=\\"header-item header-item-logo router-link-exact-active router-link-active\\"><img src=\\"~@/assets/images/cosmos-wordmark-white.svg\\"></a>
      <app-menu></app-menu>
         <!---->
   </div>
</nav>"
`;

exports[`AppHeader has the expected html structure 2 1`] = `
"<nav id=\\"app-header\\">
   <div class=\\"container\\">
      <div class=\\"header-item\\"></div>
   <a href=\\"#/\\" class=\\"header-item header-item-logo router-link-exact-active router-link-active\\"><img src=\\"~@/assets/images/cosmos-wordmark-white.svg\\"></a>
   <app-menu></app-menu>
   <div class=\\"header-item\\">
      <i class=\\"material-icons\\">close</i>
   </div>
</div>
</nav>"
`;

exports[`AppHeader has the expected html structure 3 1`] = `
"<nav id=\\"app-header\\">
   <div class=\\"container\\">
      <!---->
      <a href=\\"#/\\" class=\\"header-item header-item-logo router-link-exact-active router-link-active\\"><img src=\\"~@/assets/images/cosmos-wordmark-white.svg\\"></a>
      <app-menu></app-menu>
         <!---->
   </div>
</nav>"
`;

exports[`AppHeader has the expected html structure 4 1`] = `
"<nav id=\\"app-header\\">
   <div class=\\"container\\">
      <div class=\\"header-item\\"></div>
   <a href=\\"#/\\" class=\\"header-item header-item-logo router-link-exact-active router-link-active\\"><img src=\\"~@/assets/images/cosmos-wordmark-white.svg\\"></a>
   <!---->
   <div class=\\"header-item\\">
      <i class=\\"material-icons\\">menu</i>
   </div>
</div>
</nav>"
`;
